# cbnsl_benchmark

./: .gitignore  README.md  install.sh  pyproject.toml  requirements-git.txt  requirements.txt
.context/: architecture.md  useful_links.md
algorithms/: ADAPTER_GUIDE.md  AlgorithmAdapter.py  CMIICAdapter.py  CPCAdapter.py  GHCBDeuAdapter.py  LiNGAMAdapter.py  MIICAdapter.py  NOTEARSAdapter.py
algorithms/adapters/: CPCAdapter.py
analysis/: BenchmarkAnalyzer.py  GridSearch.py  ParetoSelector.py  __init__.py
examples/: basic_usage.py
metrics/: F1ScoreMetric.py  MetricAdapter.py  SHDMetric.py  TPRMetric.py
notebooks/: benchmark_sachs.ipynb
pipeline/: Dataset.py  Pipeline.py  Result.py  Structure.py
preprocessing/: __init__.py  hartemink.py
results/: .gitkeep
test/: t_CPC_SHD.py
tests/: test_comparison_sachs.py  test_cpc_sachs.py  test_cpc_shd.py  test_cpc_with_golden.py  test_grid_search_sachs.py  test_hartemink.py
tests/integration/: test_cpc_shd.py  test_cpc_with_golden.py
