# ===== Required section: Build system =====
# Tells Python how to build/install your package
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ===== Project information =====
[project]
name = "cbnsl-benchmark"  # Package name (for pip install)
version = "0.1.0"  # Current version
description = "Benchmark for Continuous Bayesian Network Structure Learning"
requires-python = ">=3.8"  # Minimum Python version

# Dependencies required to use your package
dependencies = [
    "pyAgrum",
    "openturns",
    "lingam",
]

# ===== Optional dependencies =====
# Install with: pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "pytest",  # For testing
    "black",   # For code formatting
]

# ===== Setuptools configuration =====
# Specifies which folders to include in the package
[tool.setuptools.packages.find]
include = ["pipeline*", "algorithms*", "metrics*", "analysis*"]
exclude = ["tests*", "examples*", "references*", "data*", "results*", "__pycache__*"]
